<resources>
    <string name="app_name">NASApp</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="find_in_wikipedia">Find in Wikipedia</string>
    <string name="photo_of_the_day">Photo of the day</string>
    <string name="search">Search</string>
    <string name="image_hint">Please click on the image to view the description</string>
    <string name="fab">FAB</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Preference Titles -->
    <string name="general_header">General</string>

    <!-- General Preferences -->
    <string name="dark_mode_title">Dark theme</string>
    <string name="dark_mode_summary">Enable or disable Dark theme</string>
    <string name="solar_system">Solar system</string>
    <string name="list_of_asteroids">List of asteroids</string>
    <string name="earth_image">Earth image</string>
    <string name="mars_image">Mars image</string>
    <string name="_1">На экран 1</string>
    <string name="_2">На экран 2</string>
    <string name="swipe1">Swipe1</string>
    <string name="swipe2">Swipe2</string>
    <string name="swipe3">Swipe3</string>

</resources>