<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvvm.view.ui.fragment.main.MainFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="10dp"
            android:paddingStart="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                android:hint="@string/find_in_wikipedia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                app:hintTextColor="@color/hint_text_color_selector"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconCheckable="true"
                app:endIconDrawable="@drawable/ic_wikipedia"
                app:endIconMode="custom"
                app:helperText="Search the term in Wikipedia"
                app:layout_constraintBottom_toTopOf="@+id/image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/NASApp.TextInputLayout">
                
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_wikipedia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionSearch"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

<!--            Добавить chips -->
<!--            <com.google.android.material.chip.ChipGroup-->
<!--                android:id="@+id/chip_group"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="16dp"-->
<!--                app:singleSelection="true"-->
<!--                app:layout_constraintBottom_toTopOf="@id/image_view"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/input_layout">-->

<!--                <com.google.android.material.chip.Chip-->
<!--                    style="@style/Widget.MaterialComponents.Chip.Choice"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="Choice A" />-->

<!--                <com.google.android.material.chip.Chip-->
<!--                    style="@style/Widget.MaterialComponents.Chip.Choice"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="Choice B" />-->

<!--                <com.google.android.material.chip.Chip-->
<!--                    style="@style/Widget.MaterialComponents.Chip.Choice"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="Choice C" />-->
<!--            </com.google.android.material.chip.ChipGroup>-->

            <br.svcdev.nasapp.mvvm.view.ui.custom.EquilateralImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/photo_of_the_day"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@id/image_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_layout" />

            <TextView
                android:id="@+id/image_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_view" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/image_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:fabAlignmentMode="center"
        app:fabAnimationMode="scale"
        app:hideOnScroll="true"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/ic_menu"
        style="@style/NASApp.BottomAppBar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:backgroundTint="?colorSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/bottom_app_bar"
        app:srcCompat="@drawable/ic_add"
        style="@style/NASApp.FAB" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>